# Intrisic_Nature

./: .gitignore  <file_or_folder_1>  <file_or_folder_2>  AGENTS.md  pyproject.toml  requirements.txt
.github/: JULES_GEMINI_AGENT_IRH_v22.2.md  copilot-instructions.md  pull_request_template.md
.github/agents/: The_Mathmatician.agent.md  error-eating.agent.md
.github/archive_dec2025/: COMPLIANCE_IMPLEMENTATION_COMPLETE.md  COMPLIANCE_QUICK_REFERENCE.md  COMPLIANCE_SYSTEM_README.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_TECHNICAL_AUDIT.md  MANDATORY_AUDIT_PROTOCOL.md  PHASE_2_STATUS.md  PHASE_2_USER_SUMMARY.md  THEORETICAL_CORRESPONDENCE_MANDATE.md
.github/workflows/: compliance_check.yml  experimental-data-updates.yml  irh_validation.yml  nightly_comprehensive.yml
docs/manuscripts/: IRH22.1DRAFT.txt
python/src/irh/core/v22/: __init__.py  action.py  cancellation.py  cymatics.py  harmony.py  qncd.py  quaternion.py
python/src/irh/verification/: __init__.py  annotations.py  transparency.py  uncertainty.py
python/tests/v22/: test_action.py  test_cancellation.py  test_cymatics.py  test_harmony.py  test_qncd.py  test_quaternion.py  test_verification.py
scripts/: verify_compliance.py
src/logging/: __init__.py  transparency_engine.py
tests/unit/: README.md  __init__.py  test_placeholder.py
