[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intrinsic-resonance-holography"
version = "22.1.0"
description = "Implementation of Intrinsic Resonance Holography v22.1"
authors = [{name = "The Mathematical Sentinel"}]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "networkx>=3.1",
    "qutip>=5.0.0",
    "sympy>=1.12",
    "mpmath>=1.3.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
    "ruff",
    "hypothesis"
]

[tool.setuptools.package-dir]
"" = "python/src"

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python/src"]
